--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -1,19 +1,26 @@
 
 
 
-<div class="continut bg-gray">
+<div class="continut bg-gray" ng-controller="moviesCtrl">
         <div class="wrapper-movies flex-column mx-auto" style="width:70%">
         <div class="row flex-column justify-content-center">
-                <div class="form-group col-6 text-center">
+                <div class="form-group col-6 text-center" ng-controller="EditCtrl">
                         <label for="example-date-input"  class="date-select">Select a date</label>
                       
-
-                          <input class="form-control text-input" type="date" value="2011-08-19" id="example-date-input">
+                        <div class="control">
+                            <input id="date-birth" class="form-control" type="date" ng-model="dateBirth">
+                        </div>
+                        <div class="row" >
+                       <p class="date-select">
+                      
+                            Date : {{ dateBirth | date: 'fullDate' }}</p>
+                            </div>
                      
                       </div>
               </div>
               
               <div class="row" ng-controller="movieUser">
+                 
               <table class="table table-hover">
                       <thead>
                         <tr>
@@ -31,7 +38,8 @@
                       </tbody>
               </table>
               <script type="text/ng-template" id="display">
-                <td style="width:auto;"><p class="movie-title"><img src="../images/john-wick-chapter-2-poster.jpg" style="float:left,width:60px;height:60px;margin-right:20px;">  {{movie.title}}</p></td>
+                <td style="width:auto;"><p class="movie-title">
+              {{movie.title}}</p></td>
                 <td style="width:auto;"><p class="movie-title">{{movie.time}}</p></td>
                 
                 <td style="width:auto;"><p class="movie-title">{{movie.room}}</p></td>
@@ -74,3 +82,77 @@
                     </div>
     </div>
 
+    <style>
+        /*
+        Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
+        */
+        .img-movie{
+          height:auto;
+          width:60px;
+          margin-right:20px;
+        }
+        @media only screen 
+          and (max-width: 760px), (min-device-width: 768px) 
+          and (max-device-width: 1024px)  {
+      
+          /* Force table to not be like tables anymore */
+          table, thead, tbody, th, td, tr {
+            display: block;
+          }
+      
+          /* Hide table headers (but not display: none;, for accessibility) */
+          thead tr {
+            position: absolute;
+            top: -9999px;
+            left: -9999px;
+          }
+              .table td{
+                  padding-left: 165px;
+                  padding-top: 1px;
+                  padding-right: 1px;
+                  padding-bottom: 1px;
+                 
+              }
+          tr {
+            margin: 0 0 1rem 0;
+          }
+            
+          
+          
+          td {
+            /* Behave  like a "row" */
+            border: none;
+            border-bottom: 1px solid #eee;
+            position: relative;
+            padding-left: 50%;
+          }
+      
+          td:before {
+            /* Now like a table header */
+            position: absolute;
+            /* Top/left values mimic padding */
+            top: 0;
+            left: 6px;
+            width: 45%;
+            padding-right: 10px;
+            white-space: nowrap;
+          }
+      
+          /*
+          Label the data
+          You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
+          */
+          td:nth-of-type(1):before { content: "Title"; }
+        
+          td:nth-of-type(2):before { content: "Time"; }
+          td:nth-of-type(3):before { content: "Room"; }
+              td:nth-of-type(4):before { content: ""; }
+          td:nth-of-type(5):before { content: ""; }
+        .img-movie{
+          width:50px;
+          height:auto;
+          margin-right:20px;
+        }
+        
+        }
+        </style>
