--- a/frontend/views/partials/modals/moviedetails.view.html
+++ b/frontend/views/partials/modals/moviedetails.view.html
@@ -5,17 +5,18 @@
     
           <!-- Modal Header -->
           <div class="modal-header">
-            <img src="../images/john-wick-chapter-2-poster.jpg" class="mx-auto" style="width:50%;height: 150px">
+            <img src="../images/john-wick-chapter-2-poster.jpg" class="mx-auto" style="width:auto;height: 150px">
             
           </div>
     
           <!-- Modal body -->
           <div class="modal-body">
-            <p>Title : LALALALALA</p>
-            <p>Year : LALALALA</p>
-            <p>Duration: fgdfdfdfddd</p>
-            <p>Actors: LLls, LSLSLS, LSLSLSLS</p>
-            <p style="word-wrap: break-word;">Description : gfhehvdvngjnjfnvsisjvnwjjnwjbwjipevjfnvdfnnfdfnvvndfnsnsnvggggggggggggggggggggggggggggggggggggggggggggggg</p>
+            <p class="movie-modal"><strong>Title : </strong>{{movie.title}}</p>
+            <p class="movie-modal"><strong>Release Year : </strong> 2019</p>
+            <p class="movie-modal"><strong>Duration : </strong>2h 13min</p>
+            <p class="movie-modal"><strong>Cast : </strong>Bendict Cumberbatch, Morgan Freeman</p>
+            <p class="movie-modal"> <strong>Date : </strong>7/10/2019</p>
+            <p class="movie-modal" style="word-wrap: break-word;"><strong>Description : </strong>Afhehvdvngjnjfnvsisjvnwjjnwjbwjipevjfnvdfnnfdfnvvndfnsnsnvggggggggggggggggggggggggggggggggggggggggggggggg</p>
           </div>
     
           <!-- Modal footer -->
@@ -26,3 +27,11 @@
         </div>
       </div>
     </div>
+    <style>
+    .movie-modal{
+    font-size: 19px;
+    font-family: 'Patrick Hand',cursive;
+    color: rgb(70, 16, 30);
+
+}
+    </style>
